# PcapDisturbance

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: config.example.yaml  example_rule.json  plan.example.json  plan_loss0.05.json
length_debug/: pcap_len_cmp_by_label.py  pcap_len_cnt_by_label  pcap_len_cnt_by_label.py  perturb_check.ipynb  perturb_pcap.py  perturb_pcap_scapy.py
pcaplab/: __init__.py  batch.py  cli.py  core.py  io.py  length_pool.py  match.py  perturbations.py  pipeline.py  rule_matcher.py  stages.py  stream.py  utils.py
pcaplab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pcaplab/test/: pacplab_test.sh  pcap_packet_counter.py
